# hirepaper

./: .gitignore  LICENSE  README.md  agents.md  build.py  hirepaper  hirepaper-dev  project.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
assets/examples/: candidate.example.json  config.example.toml
assets/prompts/: content-match-default.txt  content-tailor-default.txt  linkedin-generate-default.txt
assets/schemas/: candidate.schema.json  content-match-result.schema.json  content-tailor-plan.schema.json  content-tailor-report.schema.json  content-tailor-rewrite-response.schema.json  content-tailor-rewrite-result.schema.json  linkedin-report.schema.json
data/: candidate-tailored.json  candidate.json  vacancy.txt
docs/: content-match.md  content-tailor.md  content.md  file-map.md  library.md  pdf.md
sdd/backlog/: 001-pipeline-initialization.md  002-refactor-compilation-and-tex-escaping.md  003-add-pdf-language-localization.md  004-turn-project-into-cli.md  005-refactor-python-package-structure-and-entrypoints.md  006-polish-cli-command-behavior-and-ux.md  007-optimize-candidate-input-schema-and-layout-coverage.md  008-add-runtime-density-control-for-standard-layout.md  009-add-ats-safe-pdf-validation.md  010-add-pdf-generation-metadata-for-ats-check.md  011-modernize-and-harden-standard-layout.md  012-adopt-lualatex-and-harden-ats-extraction.md  013-layout-refinement-for-ats-safety.md  014-harden-pdf-build-and-density-rules.md  015-package-cli-as-single-binary.md  016-agent-instruction-consolidation.md  (+30 more)
templates/: standard.cls  standard.tex
(+67 files in other folders)
